--- a/.gitconfig
+++ b/.gitconfig
@@ -19,7 +19,7 @@
   default = current
 [core]
   pager = delta --theme="night-owlish"
-	excludesfile = /Users/kentcdodds/.gitignore_global
+	excludesfile = /Users/kylelonghurst/.gitignore_global
 [interactive]
   diffFilter = delta --color-only
 [color]
